--- a/Data_Science_concepts.ipynb
+++ b/Data_Science_concepts.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPE7HGoKV8Y32fHlX/8MGWw",
+      "authorship_tag": "ABX9TyNugfCgvigo362K8YJPGrgW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -225,7 +225,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df.loc[\"a\"]"
+        "df.iloc[0]"
       ],
       "metadata": {
         "id": "OS1mDgMH8_z5"
